# initialize_python_project

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  PROJECT_SETUP.md  README.md  pyproject.toml  python-project-generator  tox.ini
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci-reusable.yml  ci.yml  lint.yml  publish-pypi.yml  release.yml
docs/: installation.rst
md_files/: CHANGELOG.md  CONTRIBUTING.md  CONVERSION_SUMMARY.md  FIX_SUMMARY.md  INSTALL_README.md  PACKAGE_USAGE.md  PROJECT_SETUP.md  QUICKSTART.md  SECURITY.md  SUPPORT.md  TEMPLATE_README.md  USAGE.md
project_setup_guide/: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONVERSION_SUMMARY.md  FIX_SUMMARY.md  INSTALL_README.md  MANIFEST.in  Makefile  PACKAGE_USAGE.md  PROJECT_SETUP.md  TEMPLATE_README.md  USAGE.md  docs_conf.py  docs_index.rst  docs_installation.rst  docs_modules.rst  pyproject.toml  requirements-dev.txt  setup_project.py  src_template_main.py  template___init__.py  template_main.py  template_tests___init__.py  tests_template_test_main.py  tox.ini  vscode_settings.json
project_setup_guide/.github/: FUNDING.yml
project_setup_guide/.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
project_setup_guide/.github/actions/verify-metadata/: action.yml
project_setup_guide/.github/workflows/: ci.yml  lint.yml
project_setup_guide/scripts/: validate_project.py
project_setup_guide/src/python_project_generator/: __init__.py  generator.py
project_setup_guide/src/python_project_generator/templates/: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml  tox.ini
project_setup_guide/src/python_project_generator/templates/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  README.md  labels.yml
project_setup_guide/src/python_project_generator/templates/.github/ISSUE_TEMPLATE/: feature_request.md
project_setup_guide/src/python_project_generator/templates/.github/workflows/: ci-reusable.yml  publish-pypi.yml  release.yml
project_setup_guide/src/python_project_generator/templates/docs/: usage.rst
project_setup_guide/src/python_project_generator/templates/scripts/: validate_project.py
project_setup_guide/tests/: __init__.py  conftest.py  test_smoke.py
rst_files/: README.md  docs_index.rst  docs_installation.rst  docs_modules.rst  docs_usage.rst
rst_files/templates/docs/: index.rst  installation.rst  modules.rst  usage.rst
src/: validate_project.py
src/python_project_generator/: cli.py  generator.py
templates/: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  tox.ini
templates/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
templates/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
templates/.github/actions/verify-metadata/: action.yml
templates/.github/workflows/: ci.yml
templates/docs/: conf.py  index.rst  modules.rst  usage.rst
templates/md/: CHANGELOG.md  CODE_OF_CONDUCT.md  FIX_SUMMARY.md  PACKAGE_USAGE.md  PROJECT_SETUP.md  QUICKSTART.md  SECURITY.md  USAGE.md
templates/md_files/: CHANGELOG.md  CONTRIBUTING.md  CONVERSION_SUMMARY.md  INSTALL_README.md  SUPPORT.md  TEMPLATE_README.md
templates/scripts/: validate_project.py
tests/: conftest.py  test_smoke.py  test_validate_project.py
