[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-project-generator"
version = "1.0.0"
description = "Generate production-ready Python projects with modern tooling and best practices"
authors = [
  { name = "Python Community", email = "support@example.com" },
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["project-generator", "template", "boilerplate", "scaffolding"]
dependencies = []

[project.scripts]
python-project-generator = "python_project_generator.cli:main"
create-python-project = "python_project_generator.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "pytest-xdist>=3.0.0",
  "ruff>=0.1.0",
  "black>=24.4.0",
  "isort>=5.13.0",
  "mypy>=1.0.0",
  "tox>=4.0.0",
  "build>=0.10",
  "twine>=4.0",
  "pip-audit>=2.0",
  "safety>=2.0",
  "pre-commit>=3.0.0",
]
docs = [
  "sphinx>=5.0.0",
  "sphinx-rtd-theme>=1.2.0",
]

uv = [
  "uvicorn>=0.22.0",
  "uvloop>=0.17.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "DJ", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = ["S101", "COM812", "ISC001", "PLC0415", "S603", "S607", "INP001", "FBT001", "FBT002", "B008", "DTZ011", "TRY300", "BLE001", "PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"src/python_project_generator/generator.py" = ["E501", "S110"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Indent with spaces, rather than tabs
indent-style = "space"
# Respect magic trailing commas
skip-magic-trailing-comma = false
# Automatically detect the appropriate line ending
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v"
