[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-project-generator"
version = "1.0.0"
description = "Generate production-ready Python projects with modern tooling and best practices"
authors = [
  { name = "Python Community", email = "support@example.com" },
]
readme = "INSTALL_README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["project-generator", "template", "boilerplate", "cookiecutter", "scaffolding"]
dependencies = []
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Environment :: Console",
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/python-project-generator"
Documentation = "https://github.com/YOUR_USERNAME/python-project-generator#readme"
Repository = "https://github.com/YOUR_USERNAME/python-project-generator"
Issues = "https://github.com/YOUR_USERNAME/python-project-generator/issues"

[project.scripts]
python-project-generator = "python_project_generator.cli:main"
create-python-project = "python_project_generator.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "ruff>=0.1.0",
  "mypy>=1.0.0",
  "tox>=4.0.0",
  "build>=0.10",
  "twine>=4.0",
  "pip-audit>=2.0",
  "safety>=2.0",
  "pre-commit>=3.0.0",
]
docs = [
  "sphinx>=5.0.0",
  "sphinx-rtd-theme>=1.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
# Uncomment for stricter type checking:
# disallow_untyped_defs = true
# disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v"
